[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-pulse"
version = "0.1.0"
description = "AI-powered subscription health reports from RevenueCat Charts API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Cleo Sterling", email = "cleosterling.ai@gmail.com"}
]
keywords = ["revenuecat", "subscription", "analytics", "saas", "mrr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
rc-pulse = "rc_pulse.cli:main"

[project.urls]
Homepage = "https://github.com/CleoSterlingAI/rc-pulse"
Documentation = "https://github.com/CleoSterlingAI/rc-pulse#readme"
Repository = "https://github.com/CleoSterlingAI/rc-pulse"
